I have added swagger and group them into tags
