# dest/src/server.js
@@ -23,14 +23,14 @@ const app = (0, express_1.default)();
 app.use('/api-docs', swagger_ui_express_1.default.serve, swagger_ui_express_1.default.setup(swagger_output_json_1.default));
 // create AP endpoint
 app.use("/welcome", welcomeRoutes_1.default);
-app.use("/blog", createBlogRoute_1.default);
-app.use("/get", readAllRoute_1.default);
-app.use("/get", readAllRoute_1.default);
-app.use("/delete", deleteBlogRoute_1.default);
-app.use("/post", commentRoute_1.default);
-app.use("/update", updateBlogRoute_1.default);
-app.use("/admin", userRoute_1.default);
-app.use("/protect", protectedRoute_1.default);
+app.use("/blog", createBlogRoute_1.default /**#swagger.tags =["Blog"] */);
+app.use("/get", readAllRoute_1.default /**#swagger.tags=["readBlog"] */);
+app.use("/get", readAllRoute_1.default /**#swagger.tags=["readBlog"] */);
+app.use("/delete", deleteBlogRoute_1.default /**#swagger.tags=["deleteBlog"] */);
+app.use("/post", commentRoute_1.default /**#swagger.tags=["comment-Blog"] */);
+app.use("/update", updateBlogRoute_1.default /**#swagger.tags=["Update-Blog"] */);
+app.use("/admin", userRoute_1.default /**#swagger.tags=["User"] */);
+app.use("/protect", protectedRoute_1.default /**#swagger.tags=["Auth"] */);
 app.get("/hey", (_req, res) => {
     res.send("Hello, World!");
 });
